Sexual Misconduct: fixing column spacing

--- a/css/sexualmisconduct/sexualmisconduct.scss
+++ b/css/sexualmisconduct/sexualmisconduct.scss
@@ -311,7 +311,7 @@ p.i-want {
   .col {
     margin-bottom: 0;
     overflow-x: hidden;
-    padding: 3rem 2.5rem;
+    padding: 3rem 2.25rem;
     width: 100%;
 
     &:first-of-type {
@@ -320,6 +320,7 @@ p.i-want {
       @media (min-width: $lg) {
         border-bottom: 0;
         border-left: 1px solid $beige;
+        margin-bottom: 0;
       }
     }
   }
